bubba-frontend (1.9.52) claire; urgency=low

  * Changed 'disabled' fields to readonly. Closes #806 
  * Styled "add to album" popup. Closes #1329 
  * Set all style to "bold" Closes #1314
  * Prohibit list of USB disk for RAID use.

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 21:14:27 +0200

bubba-frontend (1.9.51) karmic; urgency=low

  * Fixed "create folder error message" 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 17:15:36 +0200

bubba-frontend (1.9.50) claire; urgency=low

  * Fixed styles in wizard. Closes #1292
  * Fixed spacing on first page for notebooks, Closes #1308 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 16:42:11 +0200

bubba-frontend (1.9.49) claire; urgency=low

  * Fixed wizard easyfind "reenable with same name". Closes #1321

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 15:53:24 +0200

bubba-frontend (1.9.48) claire; urgency=low

  * Fixed enable easyfind (Closes #1318)
  * Fixed php error in network managar (Closes #1315)

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 15:16:29 +0200

bubba-frontend (1.9.47) claire; urgency=low

  * Fixed set date/time. (Closes #1317) 
  * Do not disable navigation buttons when disable network settings. 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 14:42:19 +0200

bubba-frontend (1.9.46) karmic; urgency=low

  * Fixed rename error message. (Closes #1280) 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 14:08:45 +0200

bubba-frontend (1.9.45) claire; urgency=low

  * Disable fw view when wan not configured, (Closes #1312)

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 13:57:43 +0200

bubba-frontend (1.9.44) claire; urgency=low

  * Fixed update of network profile (Closes #1313)

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 12:55:12 +0200

bubba-frontend (1.9.43) claire; urgency=low

  * Fixed small screen issue on login page. 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 11:56:08 +0200

bubba-frontend (1.9.42) karmic; urgency=low
